--- a/css/corpo.css
+++ b/css/corpo.css
@@ -1,13 +1,7 @@
 .principal{
-    height: 80vh;
+    display: flex;
+    flex-direction: column;
 }
-
-/* .logo {
-    position: absolute;
-    width: 210px;
-    margin-top: -55.2%;
-    margin-left: 1.5%;
-} */
 
 .texto {
     font-family: 'Sanchez';
@@ -71,78 +65,3 @@ p {
 i {
     color: #ffffff;
 }
-
-.content {
-height: 520px;
-width: 935px;
-border-radius: 20px;
-overflow: hidden;
-position: absolute;
-top: 50%;
-left: 50%;
-transform: translate(-50%, -50%);
-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
-}
-
-.content .slide img {
-height: 100%;
-width: 100%;
-}
-
-.navigation {
-position: absolute;
-bottom: 160px;
-left: 850px;
-display: flex;
-}
-
-.bar {
-
-width: 15px;
-height: 15px;
-border: 2px solid white;
-margin: 6px;
-border-radius: 15px;
-cursor: pointer;
-transform: .5s ease;
-
-}
-
-.bar:hover {
-background-color: white;
-}
-
-input {
-display: none;
-}
-
-.slides {
-display: flex;
-width: 500%;
-height: 100%;
-}
-
-.slide {
-width: 20%;
-transition: .6s;
-}
-
-#slide1:checked ~ .s1 {
-margin-left: 0;
-} 
-
-#slide2:checked ~ .s1 {
-margin-left: -20%;
-} 
-
-#slide3:checked ~ .s1 {
-margin-left: -40%;
-} 
-
-#slide4:checked ~ .s1 {
-margin-left: -60%;
-} 
-
-#slide5:checked ~ .s1 {
-margin-left: -80%;
-} 
