--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,9 @@
 @import url(./reset.css);
 @import url(./cabecalho.css);
+@import url(./carrossel.css);
 @import url(./corpo.css);
 @import url(./rodape.css);
+
 
 :root{
     --fonte-principal:'Poppins';
